# feedsync_server

./: Cargo.toml
migrations/2023-03-31-002830_initial/: up.sql
src/: main.rs  models.rs  schema.rs  state.rs
src/web/: api.rs  req.rs
