[package]
name = "feedsync_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.0.3", features = ["postgres"] }
diesel-async = { version = "0.2.1", features = ["mobc", "postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
